--- a/aulas_e_laboratorios.qmd
+++ b/aulas_e_laboratorios.qmd
@@ -59,6 +59,7 @@ Os materiais descritos nesta página são mantidos pelo autor Bruno Montezano.
 * [Slides](slides/6_regressao/slides_regressao.html)
 * [Código dos slides](https://raw.githubusercontent.com/brunomontezano/r-workshop/main/slides/6_regressao/slides_regressao.qmd)
 * [Script em R](https://raw.githubusercontent.com/brunomontezano/r-workshop/main/slides/6_regressao/script_regressao.R)
+* [Arquivo `gambas.csv`](https://drive.google.com/uc?export=download&id=1BQgajup9B7MKJxSSrW0_x_GCrDuCkrjj)
   
 ## Aula 7: Tópicos avançados
   
