--- a/aulas_e_laboratorios.qmd
+++ b/aulas_e_laboratorios.qmd
@@ -36,6 +36,8 @@ Os materiais descritos nesta página são mantidos pelo autor Bruno Montezano.
 * [Código dos slides](https://raw.githubusercontent.com/brunomontezano/r-workshop/main/slides/3_visualizacao/slides_visualizacao.qmd)
 * [Script em R](https://raw.githubusercontent.com/brunomontezano/r-workshop/main/slides/3_visualizacao/script_visualizacao.R)
 * [Gravação da aula](https://youtu.be/wMcOUMCv5NM)
+* [Gravação do laboratório](https://youtu.be/IIW4j2nupoI)
+* [Correção da tarefa de casa](https://youtu.be/vKVBNEkSXzI)
 * [Arquivo `dados_psiquiatria.sav`](https://drive.google.com/uc?export=download&id=1CbXFwWPbSChEbYlj2b6k6LEEf6xsT4VG)
 * [Arquivo `dados_antropometricos.xlsx`](https://drive.google.com/uc?export=download&id=1MyePYTxHybfbQ75LIXyJgKDbRAtvQdT2)
   
