--- a/index.qmd
+++ b/index.qmd
@@ -16,16 +16,23 @@ about:
 
 <div style="text-align: justify">
 Bem-vindos ao Curso de Introdução ao R do grupo de pesquisa AlliaNCE
-(*Artificial Intelligence in Neuroscience*) da UFRGS. Neste curso, você irá
-aprender conceitos que permeiam a manipulação e análise de dados com uso da
-linguagem de programação de código aberto R. O curso irá fazer uso de aulas
-expositivas, juntamente de exercícios práticos e laboratórios semanais para
-revisão e exemplificação dos conceitos estudados em aula. No site, você poderá
-acessar [materiais complementares](materiais.html) recomendados pelo professor,
-[perguntas frequentes](perguntas_frequentes.html) sobre o curso, além dos
-[slides, códigos e gravações](aulas_e_laboratorios.html) das
-aulas. Aqui no site, você também poderá acessar as [tarefas
-de casa e os gabaritos](tarefas_de_casa.html) correspondentes.
+(*Artificial Intelligence in Neuroscience*) da UFRGS.
+Neste curso, você irá aprender conceitos que permeiam a manipulação
+e análise de dados com uso da linguagem de programação de código
+aberto R.
+O curso irá fazer uso de aulas expositivas, juntamente de exercícios
+práticos e laboratórios semanais para revisão e exemplificação dos
+conceitos estudados em aula.
+No site, você poderá acessar [materiais complementares](materiais.html)
+recomendados pelo professor,
+[perguntas frequentes](perguntas_frequentes.html) sobre o curso,
+além dos [slides, códigos e gravações](aulas_e_laboratorios.html)
+das aulas.
+Aqui no site, você também poderá acessar as
+[tarefas de casa e os gabaritos](tarefas_de_casa.html) correspondentes.
+Na página de [dicas](dicas.html), você encontrará uma série de vídeos
+curtos que exemplificam algumas rotinas de manipulação e análise de
+dados em R.
 </div>
 
 ## Links relevantes
