Adicionar citação para pacote tidyr na aba Dicas. Adicionar sintaxe correta ao escrever nome de pacote (skimr).

--- a/dicas.qmd
+++ b/dicas.qmd
@@ -31,11 +31,11 @@ requer conhecimento dos conceitos apresentados na
 * [Separar uma variável em várias variáveis](https://youtu.be/5-zbwgoc-ps)
   - O vídeo mostra como separar valores presentes em uma única coluna para
   múltiplas colunas de dados. Este problema pode ser bastante comum dentro de
-  pesquisa em saúde.
+  pesquisa em saúde. No exemplo, faz-se uso do pacote `tidyr`.
   
 * [Explorar dados com o pacote `skimr`](https://youtu.be/JE0N7aVQfws)
   - O vídeo apresenta uma forma de explorar os dados e visualizar um panorama
-  geral de um conjunto de dados dentro do R com uso do pacote skimr. 
+  geral de um conjunto de dados dentro do R com uso do pacote `skimr`. 
   
 * [Calcular escore de um instrumento ou escala](https://youtu.be/nQKMtrx4ZZ0)
   - O vídeo apresenta como calcular o escore total de um instrumento
