Adicionar link para vídeo de dica sobre exportação de dados em formato xlsx na aba Dicas.

--- a/dicas.qmd
+++ b/dicas.qmd
@@ -51,3 +51,8 @@ requer conhecimento dos conceitos apresentados na
   - O vídeo apresenta como calcular o $z$-score de uma variável no R através do
   pacote `dplyr`. É muito comum dentro da pesquisa em saúde que queiramos
   saber quantos desvios padrão cada valor se afasta da média do vetor.
+  
+* [Exportar tabela para arquivo do Excel](https://youtu.be/v_u6CgcrBrg)
+  - O vídeo mostra como exportar uma tabela (data frame do R) para um arquivo
+  `.xlsx` (formato do Excel) para o computador de vocês. Para isso, usa-se o
+  pacote `writexl`.
