Corrigir label do eixo x no box plot de comprimento da nadadeira por espécie

--- a/slides/6_regressao/slides_regressao.qmd
+++ b/slides/6_regressao/slides_regressao.qmd
@@ -677,7 +677,7 @@ dados::pinguins |>
   geom_boxplot(show.legend = FALSE) +
   ghibli::scale_fill_ghibli_d("MononokeMedium", direction = -1) +
   labs(y = "Comprimento da nadadeira (mm)",
-       x = "Sexo") +
+       x = "Espécie") +
   theme_minimal(20, "Charter")
 ```
 
