--- a/tarefas_de_casa.qmd
+++ b/tarefas_de_casa.qmd
@@ -125,7 +125,7 @@ para acompanhar sua análise de regressão linear simples.
   
 [Acessar o gabarito.](gabaritos/6_regressao/gabarito.html)
   
-## Aula 7: Tópicos avançados
+## Aula 7: Introdução ao *machine learning*
 
 * Dica de leitura: [An Introduction to Statistical Learning](https://www.statlearning.com/)
 
